More experimentation with CGI, prlbems with htmlgen... Updated Rakefile

--- a/mini-projects/cgi-bin/Rakefile
+++ b/mini-projects/cgi-bin/Rakefile
@@ -1,11 +1,14 @@
 require 'fileutils'
-
+#This rakefile is used to synchronize the files in this directory, with the ones in /usr/lib/cgi-bin
+#/usr/lib/cgi-bin is the default cgi executable folder for apache2 installations on linux.
+#Only affects files with the naming convention cgi_*.rb
 desc "Copy directory contents to /usr/lib/cgi-bin"
 task :move do
   files = Dir["cgi_*.rb"]
   FileUtils.cp(files, '/usr/lib/cgi-bin')
 end
 
+#We want files to be executable and readable by all, but we only want the current user to be able to write to them.
 desc "CHMOD all .rb files in /usr/lib/cgi-bin"
 task :chmod do
   files = Dir["/usr/lib/cgi-bin/*.rb"]
@@ -16,4 +19,9 @@ desc "Delete all .rb files in /usr/lib/cgi-bin"
 task :purge do
   files = Dir["/usr/lib/cgi-bin/*.rb"]
   FileUtils.rm files
+end
+
+desc "'rake move' then 'rake chmod'"
+task :update => [:move, :chmod] do
+  puts "Directory updated"
 end
